ingress/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-route
spec:
  parentRefs:
  - name: example-gw
  hostnames:
  - "www.external.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web-one
      port: 80
